2003-10-02  Derek Price  <derek@ximbiot.com>

	* main.c (main): Don't free globals that might be needed by the cleanup
	functions.
	* server.c (server_cleanup): Only clean up when called in the parent
	process.  Set buffers to NULL before shutting down and freeing in case
	we are interrupted.  Improve comments.  Add TRACE.

2003-10-01  Derek Price  <derek@ximbiot.com>

	* main.c (main): Use symbolic name for trace level.

2003-10-01  Derek Price  <derek@ximbiot.com>

	* client.c (connect_to_forked_server): Use TRACE macro rather than the
	old style.

2003-10-01  Derek Price  <derek@ximbiot.com>

	* server.c (protocol): Initialize the protocol buffer to NULL so that
	use before initialization may be detected.
	(cvs_output, cvs_outerr): Syslog messages when the appropriate buffers
	are not available.
	(server_cleanup): Reorganize for a single exit point and to eliminate
	duplicated code.  Set buf_to_net to NULL before calling the buffer
	shutdown functions in order to force error messages into the syslog.
	* buffer.c (stdio_buffer_close): Remove FIXME comment re syslog since
	the calls to error should go through the cvs_outerr function anyhow.

2003-09-30  Derek Price  <derek@ximbiot.com>

	* entries.c (WriteTemplate): TRACE on entrance to a function, not exit.
	Don't worry about checking noexec without server support since this
	function will then do nothing.

2003-09-30  Derek Price  <derek@ximbiot.com>

	* update.c (do_update): Reformat function decl.  Move and merge
	comment.

2003-09-30  Derek Price  <derek@ximbiot.com>

	* client.h (buf_output, buf_outerr): Check that our buffers exist
	before sending them data.
	(buf_output_binary): Assert that the output buffer is not NULL.

2003-09-30  Derek Price  <derek@ximbiot.com>

	* client.h, rcs.c, rcs.h, server.h: Assume __STDC__ since it is
	defined as part of the C89 spec.

2003-09-30  Derek Price  <derek@ximbiot.com>

	* commit.c (commit): Optimize function towards a single exit point.
